# SoundShare

./: .gitignore  ABSTRACT.md  AI_README.md  MIGRATIONS.md  README.md  alembic.ini  main.py  migrate.py  pyproject.toml
database/: database.py  models.py
migrations/: alembic.ini  env.py  migrations.py
migrations/versions/: 5c7a22b01944_add_last_played_column_to_songs.py  b7fdafff5477_initial_migration.py
routes/: criteria.py  dynamic_playlists.py  groups.py  library.py  playlists.py  songs.py  tags.py  unified_playlists.py
services/: audio_analyzer.py
static/css/: style.css
static/js/: app.js  file-browser.js  media-player.js  modal-manager.js  notification-system.js  playlist-common.js  playlist-player.js  song-manager.js  song-search-component.js  tag-manager.js
templates/: add_paths.html  add_scan_directories.html  add_songs.html  base.html  create_dynamic_playlist.html  create_static_playlist.html  criteria.html  dynamic_playlist_info.html  edit_dynamic_playlist.html  edit_static_playlist.html  edit_unified_playlist.html  index.html  library.html  playing.html  playlist_info.html  playlists_combined.html  songs.html  tags.html  unified_playlist_info.html
templates/components/: filter_controls.html  playlist_edit_styles.html  playlist_options.html  song_info_modal.html  song_table.html
utils/: config.py  constants.py
