[project]
name = "soundshare"
version = "0.1.0"
description = "Dynamic playlist management for D&D campaigns"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "librosa>=0.11.0",
    "mutagen>=1.47.0",
    "numpy>=2.2.6",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.7",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.1",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.42",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a17",
]

